Fixed collapse to include only the section under the heading.  Display no longer puts an arrow next to collapsible menu items in the theme.

--- a/collapsedocument.css
+++ b/collapsedocument.css
@@ -5,7 +5,7 @@
 .expandable:hover {
   cursor:pointer;
 }
-.collapsed {
+h2.collapsed {
   background : transparent url('images/menu-collapsed') left 30% no-repeat;
 }
 div.collapse {
